# pbh-mini-package

./: .gitignore  README.md  pyproject.toml
examples/: run_portfolio_demo.py
results/: example_scan.csv  live_evaporation_simulation.html
src/pbhmini/: __init__.py  abundance.py  baryogenesis.py  benchmark.py  evaporation.py  live.py  scan.py
tests/: test_pbhmini.py
