[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pbh-mini-package"
version = "0.1.0"
description = "Toy computational portfolio for primordial black hole abundance and evolution."
requires-python = ">=3.10"
dependencies = ["numpy", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
